--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
         "@type": "ImageGallery",
         "name": "Mini galeria kotów",
         "description": "Oglądaj losowe zdjęcia kotów w lekkiej galerii zbudowanej w React.",
-        "url": "https://twoja-domena.pl",
+        "url": "https://damianar420.github.io/mini-galeria-kotow/",
         "image": [
           "https://cdn2.thecatapi.com/images/abc.jpg",
           "https://cdn2.thecatapi.com/images/def.jpg",
@@ -45,7 +45,7 @@
       content="Oglądaj losowe zdjęcia słodkich kotów w minimalistycznej galerii!"
     />
     <meta property="og:image" content="%PUBLIC_URL%/preview.png" />
-    <meta property="og:url" content="https://twoja-domena.pl" />
+    <meta property="og:url" content="https://damianar420.github.io/mini-galeria-kotow/" />
     <meta property="og:type" content="website" />
 
     <!-- Twitter Card -->
